--- a/easy-common/easy-security/pom.xml
+++ b/easy-common/easy-security/pom.xml
@@ -22,8 +22,18 @@
         </dependency>
 
         <dependency>
+            <groupId>com.easy.restful</groupId>
+            <artifactId>easy-sys</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>${jjwt.version}</version>
         </dependency>
 
 <!--        <dependency>-->
