--- a/easy-common/easy-core/src/main/resources/default-config.properties
+++ b/easy-common/easy-core/src/main/resources/default-config.properties
@@ -28,9 +28,9 @@ spring.messages.encoding=UTF-8
 server.max-http-header-size=100KB
 ###################### mybatis-plus\u9ED8\u8BA4\u914D\u7F6E #######################
 # mapper\u8DEF\u5F84
-mybatis-plus.mapper-locations=classpath*:com/frame/restful/**/mapping/*.xml
+mybatis-plus.mapper-locations=classpath*:com/easy/restful/**/mapping/*.xml
 # \u5B9E\u4F53\u7C7B\u8DEF\u5F84
-mybatis-plus.typeAliasesPackage=com.frame.restful.modular.*.model
+mybatis-plus.typeAliasesPackage=com.easy.restful.**.model
 # \u903B\u8F91\u5220\u9664
 mybatis-plus.global-config.logic-delete-value=0
 mybatis-plus.global-config.logic-not-delete-value=1
