--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.3.0.RELEASE</version>
+<!--        <version>2.1.5.RELEASE</version>-->
+
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -35,7 +37,7 @@
         <fastjson.version>1.2.69</fastjson.version>
         <swagger.fox.version>2.9.2</swagger.fox.version>
         <swagger.core.version>1.5.24</swagger.core.version>
-        <security.oauth.version>2.3.6.RELEASE</security.oauth.version>
+        <jjwt.version>0.9.1</jjwt.version>
         <swagger.fox.version>2.9.2</swagger.fox.version>
         <swagger.core.version>1.5.24</swagger.core.version>
     </properties>
