--- a/pom.xml
+++ b/pom.xml
@@ -34,12 +34,13 @@
         <spring-boot.version>2.3.0.RELEASE</spring-boot.version>
         <hutool.version>5.3.5</hutool.version>
         <mybatis-plus.version>3.3.2</mybatis-plus.version>
+        <druid.version>1.1.23</druid.version>
+        <mysql-connector-java.version>8.0.11</mysql-connector-java.version>
         <fastjson.version>1.2.69</fastjson.version>
         <swagger.fox.version>2.9.2</swagger.fox.version>
         <swagger.core.version>1.5.24</swagger.core.version>
         <jjwt.version>0.9.1</jjwt.version>
-        <swagger.fox.version>2.9.2</swagger.fox.version>
-        <swagger.core.version>1.5.24</swagger.core.version>
+        <knife4j.version>2.0.4</knife4j.version>
     </properties>
 
     <dependencyManagement>
