--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>easy-api</module>
         <module>easy-common</module>
         <module>easy-sys</module>
+        <module>easy-file</module>
     </modules>
 
     <properties>
@@ -62,6 +63,11 @@
             <dependency>
                 <groupId>com.easy.restful</groupId>
                 <artifactId>easy-sys</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.easy.restful</groupId>
+                <artifactId>easy-file</artifactId>
                 <version>${project.version}</version>
             </dependency>
         </dependencies>
