添加示例模块

--- a/easy-api/pom.xml
+++ b/easy-api/pom.xml
@@ -27,6 +27,10 @@
             <groupId>com.easy.restful</groupId>
             <artifactId>easy-activiti</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.easy.restful</groupId>
+            <artifactId>easy-sample</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
