--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>easy-sys</module>
         <module>easy-file</module>
         <module>easy-activiti</module>
+        <module>easy-sample</module>
     </modules>
 
     <properties>
@@ -50,6 +51,11 @@
         <dependencies>
             <dependency>
                 <groupId>com.easy.restful</groupId>
+                <artifactId>easy-activiti</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.easy.restful</groupId>
                 <artifactId>easy-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -65,6 +71,11 @@
             </dependency>
             <dependency>
                 <groupId>com.easy.restful</groupId>
+                <artifactId>easy-sample</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.easy.restful</groupId>
                 <artifactId>easy-sys</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -73,11 +84,7 @@
                 <artifactId>easy-file</artifactId>
                 <version>${project.version}</version>
             </dependency>
-            <dependency>
-                <groupId>com.easy.restful</groupId>
-                <artifactId>easy-activiti</artifactId>
-                <version>${project.version}</version>
-            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
