添加定时任务

--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,13 @@
     <url>http://www.easy-restful.com</url>
 
     <modules>
+        <module>easy-activiti</module>
         <module>easy-api</module>
         <module>easy-common</module>
-        <module>easy-sys</module>
         <module>easy-file</module>
-        <module>easy-activiti</module>
         <module>easy-sample</module>
+        <module>easy-scheduler</module>
+        <module>easy-sys</module>
     </modules>
 
     <properties>
@@ -71,17 +72,22 @@
             </dependency>
             <dependency>
                 <groupId>com.easy.restful</groupId>
+                <artifactId>easy-file</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.easy.restful</groupId>
                 <artifactId>easy-sample</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.easy.restful</groupId>
-                <artifactId>easy-sys</artifactId>
+                <artifactId>easy-scheduler</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.easy.restful</groupId>
-                <artifactId>easy-file</artifactId>
+                <artifactId>easy-sys</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
