添加代码生成功能

--- a/easy-api/pom.xml
+++ b/easy-api/pom.xml
@@ -25,6 +25,10 @@
         </dependency>
         <dependency>
             <groupId>com.easy.restful</groupId>
+            <artifactId>easy-generator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.easy.restful</groupId>
             <artifactId>easy-scheduler</artifactId>
         </dependency>
         <dependency>
