--- a/easy-api/src/main/resources/application-dev.yml
+++ b/easy-api/src/main/resources/application-dev.yml
@@ -52,6 +52,6 @@ spring:
         # 默认的数据过期时间 30 分钟 单位: 秒
         expire: 1800
     datasource:
-        url: jdbc:mysql://localhost:3306/easy-restful?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMulQueries=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+        url: jdbc:mysql://localhost:3306/easy-restful?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMulQueries=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&nullDatabaseMeansCurrent=true
         username: root
         password: tengchong
