--- a/easy-api/src/main/resources/application-dev.yml
+++ b/easy-api/src/main/resources/application-dev.yml
@@ -18,24 +18,16 @@ project:
 server:
     # 端口号
     port: 80
-jwt:
-    # token 加密密钥泄露后务必更改
-    secret: nje7ESnAM5upEWV5DEWXBGnIntXyZvOY
-    access-token:
-        # AccessToken 有效期（s）30 分钟
-        expiration-time: 1800
-    refresh-token:
-        # RefreshToken 有效期（s）1 天
-        expiration-time: 86400
 spring:
+    # Redis
     redis:
-        # Redis数据库索引（默认为0）
+        # 数据库索引（默认为0）
         database: 10
-        # Redis服务器地址
+        # 服务器地址
         host: 127.0.0.1
-        # Redis服务器连接端口
+        # 服务器连接端口
         port: 6379
-        # Redis服务器连接密码（默认为空）
+        # 服务器连接密码（默认为空）
         password:
         jedis:
             pool:
@@ -51,6 +43,7 @@ spring:
         timeout: 10
         # 默认的数据过期时间 30 分钟 单位: 秒
         expire: 1800
+    # 数据源
     datasource:
         url: jdbc:mysql://localhost:3306/easy-restful?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMulQueries=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&nullDatabaseMeansCurrent=true
         username: root
