--- a/easy-api/src/main/resources/application.yml
+++ b/easy-api/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
         active: dev
     resources:
         # 静态资源映射
-        static-locations: ["file:${project.file-upload-path}/", "classpath:/static/"]
+        static-locations: ["classpath:/static/", "classpath:/themes/", "file:${project.file-upload-path}/"]
     mvc:
         static-path-pattern: /static/**
     servlet:
