--- a/easy-common/easy-mybatis/pom.xml
+++ b/easy-common/easy-mybatis/pom.xml
@@ -34,6 +34,12 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>${druid.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+            <version>${dynamic-datasource.version}</version>
+        </dependency>
+
     </dependencies>
 
 
