--- a/easy-api/pom.xml
+++ b/easy-api/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>easy-api</artifactId>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <description>Easy Api</description>
 
@@ -51,6 +51,9 @@
             <resource>
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/webapp</directory>
             </resource>
         </resources>
         <plugins>
