--- a/easy-api/src/main/resources/application-dev.yml
+++ b/easy-api/src/main/resources/application-dev.yml
@@ -43,11 +43,13 @@ spring:
         timeout: 10
         # 默认的数据过期时间 30 分钟 单位: 秒
         expire: 1800
-    # 数据源
     datasource:
-        url: jdbc:mysql://localhost:3306/easy-admin?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMulQueries=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&nullDatabaseMeansCurrent=true&useInformationSchema=true
-        username: root
-        password: tengchong
+        dynamic:
+            datasource:
+                master:
+                    url: jdbc:mysql://localhost:3306/easy-admin?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMulQueries=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&nullDatabaseMeansCurrent=true&useInformationSchema=true
+                    username: root
+                    password: tengchong
 async:
     executor:
         thread:
