CMS添加基于Elasticsearch搜索功能

--- a/easy-cms/pom.xml
+++ b/easy-cms/pom.xml
@@ -19,6 +19,10 @@
             <groupId>com.easy.admin</groupId>
             <artifactId>easy-sys</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.easy.admin</groupId>
+            <artifactId>easy-elasticsearch</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <resources>
