数据库改为外网

--- a/easy-api/src/main/resources/application-dev.yml
+++ b/easy-api/src/main/resources/application-dev.yml
@@ -57,9 +57,9 @@ spring:
         dynamic:
             datasource:
                 master:
-                    url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:easy-vben}?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMulQueries=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&nullDatabaseMeansCurrent=true&useInformationSchema=true
-                    username: ${DB_USERNAME:root}
-                    password: ${DB_PASSWORD:tengchong}
+                    url: jdbc:mysql://${DB_HOST:121.199.79.208}:${DB_PORT:3306}/${DB_NAME:easy-vben-dev}?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMulQueries=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&nullDatabaseMeansCurrent=true&useInformationSchema=true
+                    username: ${DB_USERNAME:easy-vben}
+                    password: ${DB_PASSWORD:UskJ4RGXu2eBCtU2k6sP}
 async:
     executor:
         thread:
