--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
         <knife4j.version>2.0.4</knife4j.version>
         <shiro.version>1.7.0</shiro.version>
         <beetl.version>3.3.0.RELEASE</beetl.version>
+        <jsoup.version>1.15.1</jsoup.version>
         <log4j2.version>2.15.0</log4j2.version>
     </properties>
 
