--- a/easy-activiti/pom.xml
+++ b/easy-activiti/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>Easy-Admin</artifactId>
+        <artifactId>easy-vben</artifactId>
         <groupId>com.easy.admin</groupId>
         <version>0.1.0</version>
     </parent>
