--- a/easy-api/pom.xml
+++ b/easy-api/pom.xml
@@ -5,12 +5,12 @@
 
     <parent>
         <groupId>com.easy.admin</groupId>
-        <artifactId>Easy-Admin</artifactId>
+        <artifactId>easy-vben</artifactId>
         <version>0.1.0</version>
     </parent>
 
     <artifactId>easy-api</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <description>Easy Api</description>
 
