--- a/easy-file/pom.xml
+++ b/easy-file/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.easy.admin</groupId>
-        <artifactId>Easy-Admin</artifactId>
+        <artifactId>easy-vben</artifactId>
         <version>0.1.0</version>
     </parent>
 
