--- a/easy-sys/pom.xml
+++ b/easy-sys/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.easy.admin</groupId>
-        <artifactId>Easy-Admin</artifactId>
+        <artifactId>easy-vben</artifactId>
         <version>0.1.0</version>
     </parent>
 
