--- a/easy-common/pom.xml
+++ b/easy-common/pom.xml
@@ -20,6 +20,7 @@
         <module>easy-mybatis</module>
         <module>easy-redis</module>
         <module>easy-elasticsearch</module>
+        <module>easy-swagger</module>
     </modules>
 
 </project>
