--- a/easy-sys/pom.xml
+++ b/easy-sys/pom.xml
@@ -29,6 +29,10 @@
             <groupId>com.easy.admin</groupId>
             <artifactId>easy-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.easy.admin</groupId>
+            <artifactId>easy-swagger</artifactId>
+        </dependency>
         <!-- end:common -->
         <!--shiro-->
         <dependency>
