--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.0</version>
+        <version>2.7.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -44,8 +44,7 @@
         <druid.version>1.2.11</druid.version>
         <mysql-connector-java.version>8.0.29</mysql-connector-java.version>
         <dynamic-datasource.version>3.5.1</dynamic-datasource.version>
-        <swagger.fox.version>2.9.2</swagger.fox.version>
-        <swagger.core.version>1.5.24</swagger.core.version>
+        <swagger.fox.version>3.0.0</swagger.fox.version>
         <jjwt.version>0.9.1</jjwt.version>
         <knife4j.version>2.0.4</knife4j.version>
         <shiro.version>1.9.1</shiro.version>
@@ -75,6 +74,11 @@
             <dependency>
                 <groupId>com.easy.admin</groupId>
                 <artifactId>easy-redis</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.easy.admin</groupId>
+                <artifactId>easy-swagger</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
