--- a/easy-common/easy-swagger/pom.xml
+++ b/easy-common/easy-swagger/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>20.0</version>
+            <version>31.1-jre</version>
             <scope>compile</scope>
         </dependency>
 
