--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <mybatis-plus.version>3.5.3.1</mybatis-plus.version>
         <druid.version>1.2.16</druid.version>
         <mysql-connector-java.version>8.0.32</mysql-connector-java.version>
+        <mariadb-java-client.version>3.1.4</mariadb-java-client.version>
         <dynamic-datasource.version>3.6.1</dynamic-datasource.version>
         <swagger.fox.version>3.0.0</swagger.fox.version>
         <jjwt.version>0.9.1</jjwt.version>
