--- a/easy-api/src/main/resources/application-dev.yml
+++ b/easy-api/src/main/resources/application-dev.yml
@@ -18,16 +18,16 @@ logging:
   file:
     path: logs
 spring:
-  elasticsearch:
-    rest:
-      # 连接超时时间
-      connection-timeout: 1s
-      username:
-      password:
-      # 读取超时时间
-      read-timeout: 30s
-      # es rest 接口地址，多个用逗号隔开
-      uris: ${ES_HOST:127.0.0.1}:${ES_PORT:9200}
+#  elasticsearch:
+#    rest:
+#      # 连接超时时间
+#      connection-timeout: 1s
+#      username:
+#      password:
+#      # 读取超时时间
+#      read-timeout: 30s
+#      # es rest 接口地址，多个用逗号隔开
+#      uris: ${ES_HOST:127.0.0.1}:${ES_PORT:9200}
   # Redis
   redis:
     # 数据库索引（默认为0）
@@ -56,7 +56,7 @@ spring:
     dynamic:
       datasource:
         master:
-          url: jdbc:mysql://${DB_HOST:127.0.0.1}:${DB_PORT:3306}/${DB_NAME:easy-vben}?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMulQueries=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&nullDatabaseMeansCurrent=true&useInformationSchema=true
+          url: jdbc:mariadb://${DB_HOST:127.0.0.1}:${DB_PORT:3306}/${DB_NAME:easy-vben}?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMulQueries=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&nullDatabaseMeansCurrent=true&useInformationSchema=true
           username: ${DB_USERNAME:root}
           password: ${DB_PASSWORD:tengchong}
 # 打印sql语句,调试用
