--- a/easy-api/Dockerfile
+++ b/easy-api/Dockerfile
@@ -8,6 +8,6 @@ COPY ${JAR_FILE} app.jar
 
 EXPOSE 80
 
-ENV TZ=Asia/Shanghai JAVA_OPTS="-Xms1024m -Xmx2048m -Djava.security.egd=file:/dev/./urandom"
+ENV TZ=Asia/Shanghai JAVA_OPTS="-Xms2000m -Xmx4000m -Djava.security.egd=file:/dev/./urandom"
 
-CMD java $JAVA_OPTS -jar --project.node=${projectNode} app.jar
+CMD java $JAVA_OPTS -jar app.jar
