--- a/easy-api/pom.xml
+++ b/easy-api/pom.xml
@@ -11,6 +11,7 @@
 
     <artifactId>easy-api</artifactId>
     <packaging>jar</packaging>
+<!--    <packaging>war</packaging>-->
 
     <description>Easy Api</description>
 
@@ -39,10 +40,10 @@
             <groupId>com.easy.admin</groupId>
             <artifactId>easy-sample</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.easy.admin</groupId>-->
-<!--            <artifactId>easy-cms</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.easy.admin</groupId>
+            <artifactId>easy-cms</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
