调整过时的配置

--- a/easy-common/easy-core/src/main/resources/default-config.properties
+++ b/easy-common/easy-core/src/main/resources/default-config.properties
@@ -20,9 +20,9 @@ spring.datasource.dynamic.druid.connection-properties.remarks=true
 spring.datasource.dynamic.druid.connection-properties.useInformationSchema=true
 
 # \u8BBE\u7F6E\u7F16\u7801\u683C\u5F0F
-spring.http.encoding.charset=UTF-8
-spring.http.encoding.enabled=true
-spring.http.encoding.force=true
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
 spring.messages.encoding=UTF-8
 # header \u6700\u5927\u957F\u5EA6
 server.max-http-header-size=100KB
